Basic agenda view working. It prints sections with a date ordered by date, followed by sections without a date. The view is updated when a .org file is saved.

--- a/package.json
+++ b/package.json
@@ -103,6 +103,10 @@
             {
                 "command": "org.butterfly",
                 "title": "Org: Butterfly"
+            },
+            {
+               "command": "org.openAgendaView",
+               "title": "Org: Open Agenda View"
             }
         ],
         "languages": [
