Add deadline and schedule commands Change timestamp command to insert active timestamps <...> Improve agenda view to support DEADLINE and SCHEDULED keywords

--- a/package.json
+++ b/package.json
@@ -69,6 +69,14 @@
                 "title": "Org: Update Clock Total"
             },
             {
+               "command": "org.deadline",
+               "title": "Org: Deadline"
+            },
+            {
+               "command": "org.schedule",
+               "title": "Org: Schedule"
+            },
+            {
                 "command": "org.incrementContext",
                 "title": "Org: Increment Context"
             },
