--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "vscode": "^1.23.0"
     },
     "categories": [
-        "Languages"
+        "Programming Languages"
     ],
     "activationEvents": [
         "onLanguage:org"
@@ -69,12 +69,12 @@
                 "title": "Org: Update Clock Total"
             },
             {
-               "command": "org.deadline",
-               "title": "Org: Deadline"
+                "command": "org.deadline",
+                "title": "Org: Deadline"
             },
             {
-               "command": "org.schedule",
-               "title": "Org: Schedule"
+                "command": "org.schedule",
+                "title": "Org: Schedule"
             },
             {
                 "command": "org.incrementContext",
@@ -113,8 +113,8 @@
                 "title": "Org: Butterfly"
             },
             {
-               "command": "org.openAgendaView",
-               "title": "Org: Open Agenda View"
+                "command": "org.openAgendaView",
+                "title": "Org: Open Agenda View"
             }
         ],
         "languages": [
@@ -277,13 +277,13 @@
     },
     "devDependencies": {
         "@types/mocha": "^2.2.48",
-        "@types/node": "^6.14.3",
+        "@types/node": "^6.14.9",
         "codecov": "^3.1.0",
         "mocha": "^6.0.1",
         "tslint": "^5.14.0",
         "tslint-config-prettier": "^1.18.0",
         "typescript": "^2.9.2",
-        "vscode": "^1.1.30",
+        "vscode": "^1.1.36",
         "vscode-coverage-test-runner": "^1.0.0"
     },
     "dependencies": {
